Parse besu transaction logs